--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-.card {
+.first {
   margin: 0 auto;
   float: none;
   margin-bottom: 10px;
 }
 
-.card-title {
+.title {
   text-align: center;
   color: rgb(58, 173, 245);
   background-color: rgba(43, 158, 235, 0.199);
@@ -16,10 +16,21 @@
   background-color: aliceblue;
 }
 
-.card-body {
+.body {
   background-color: aliceblue;
 }
 
-.card-body {
-  justify-content: center;
+.datepicker {
+  padding-left: 40px;
+}
+
+.task1 {
+  text-align: center;
+}
+
+.bodytask {
+  border-style: dashed;
+  border-width: 0.15em;
+  border-color: green;
+  background-color: rgba(6, 204, 6, 0.253);
 }
